# png-cleaner

./: .gitignore  Cargo.toml  Readme.md  pngc.toml
.github/workflows/: publish.yml
src/: error.rs  main.rs  utils.rs
