[package]
name = "png-cleaner"
version = "0.3.0"
authors = ["Aster <192607617@qq.com>"]
description = "Transform yaml, json, pkl files to wolfram"
repository = "https://github.com/GalAster/wolfram-exchange"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[[bin]]
name = "pngc"
path = "src/main.rs"

[dependencies]
glob = "0.3"
clap = "2.27"
png  = "0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'